Implemented changes suggested in lab5 pull request
Implemented changes suggested in the pull request, removed unnecessary
imports and modified .gitignore file, .vscode directory is now present.

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,17 @@ replay_pid*
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
 .settings
+
+# from Visual Studio Code .gitignore
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
